// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TopBannerExternal ClickMainMenuOpenAndClose play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main:first-of-type"
       class="TopBannerSkipLink_skipLink__5N+l7"
    >
      <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="TopBannerExternal_topContainer__WnqE6">
      <div class="TopBannerLogo_containerLogo__HNnbt">
        <a href="https://www.skatteetaten.no/"
           class="TopBannerLogo_logoLink__DvORV"
        >
          <img class="TopBannerLogo_logo_mobile__x4lpB"
               alt="Forside Skatteetaten"
               src="ske-logo-mobile.c19c0351f0931cd93ae02f37a7fb7498.svg"
          >
          <img class="TopBannerLogo_logo_desktop__SI+eK"
               alt="Forside Skatteetaten"
               src="ske-logo.efcae54a4ea6b0ab43b2b65cd3ca166f.svg"
          >
        </a>
      </div>
      <div class="TopBannerExternal_contentContainer__h2K6k">
        <div class="TopBannerExternal_content__obwYA">
          <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_standard__7194L  undefined"
                  aria-expanded="false"
          >
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_standard__veQ3F TopBannerButton_icon__FyVd5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M3 6h18v2H3V6Zm0 5h18v2H3v-2Zm0 5h18v2H3v-2Z">
              </path>
            </svg>
            <span>
              Meny
            </span>
          </button>
        </div>
      </div>
    </div>
    <div class="TopBannerExternal_separator__r8sr4">
      <div class="TopBannerExternal_separatorRight__PwT1p">
      </div>
      <div class="TopBannerExternal_separatorLeft__OpgEY">
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBannerExternal WithAttributes play-test 1`] = `
<div data-test-block="true">
  <header id="htmlId"
          lang="nb"
          data-testid="123ID"
          class="dummyClassname"
  >
    <a href="main:first-of-type"
       class="TopBannerSkipLink_skipLink__5N+l7"
    >
      <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="TopBannerExternal_topContainer__WnqE6">
      <div class="TopBannerLogo_containerLogo__HNnbt">
        <a href="https://www.skatteetaten.no/"
           class="TopBannerLogo_logoLink__DvORV"
        >
          <img class="TopBannerLogo_logo_mobile__x4lpB"
               alt="Forside Skatteetaten"
               src="ske-logo-mobile.c19c0351f0931cd93ae02f37a7fb7498.svg"
          >
          <img class="TopBannerLogo_logo_desktop__SI+eK"
               alt="Forside Skatteetaten"
               src="ske-logo.efcae54a4ea6b0ab43b2b65cd3ca166f.svg"
          >
        </a>
      </div>
      <div class="TopBannerExternal_contentContainer__h2K6k">
        <div class="TopBannerExternal_content__obwYA">
          <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_filled__oJNLx  undefined">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_filled__h6Gxu TopBannerButton_icon__FyVd5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M12 17a2 2 0 0 1-2-2c0-1.11.89-2 2-2a2 2 0 0 1 0 4Zm6 3V10H6v10h12Zm0-12a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V10c0-1.11.89-2 2-2h1V6a5 5 0 1 1 10 0v2h1Zm-6-5a3 3 0 0 0-3 3v2h6V6a3 3 0 0 0-3-3Z">
              </path>
            </svg>
            <span>
              Logg inn
            </span>
          </button>
        </div>
      </div>
    </div>
    <div class="TopBannerExternal_separator__r8sr4">
      <div class="TopBannerExternal_separatorRight__PwT1p">
      </div>
      <div class="TopBannerExternal_separatorLeft__OpgEY">
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBannerExternal WithChildren play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main:first-of-type"
       class="TopBannerSkipLink_skipLink__5N+l7"
    >
      <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="TopBannerExternal_topContainer__WnqE6">
      <div class="TopBannerLogo_containerLogo__HNnbt">
        <a href="https://www.skatteetaten.no/"
           class="TopBannerLogo_logoLink__DvORV"
        >
          <img class="TopBannerLogo_logo_mobile__x4lpB"
               alt="Forside Skatteetaten"
               src="ske-logo-mobile.c19c0351f0931cd93ae02f37a7fb7498.svg"
          >
          <img class="TopBannerLogo_logo_desktop__SI+eK"
               alt="Forside Skatteetaten"
               src="ske-logo.efcae54a4ea6b0ab43b2b65cd3ca166f.svg"
          >
        </a>
      </div>
      <div class="TopBannerExternal_contentContainer__h2K6k">
        <div>
          <div class>
            <label id="labelId-:r8:"
                   class="LabelWithHelp_label__59tP-  LabelWithHelp_srOnly__uWL7Z"
                   for="textFieldTextboxId-:r7:"
            >
              Søk
            </label>
            <input id="textFieldTextboxId-:r7:"
                   class="TextField_textbox__qbZlk"
                   placeholder="Søk"
                   value
            >
            <div id="textFieldErrorId-:r6:"
                 aria-live="assertive"
                 aria-atomic="true"
            >
            </div>
          </div>
        </div>
        <div class="TopBannerExternal_content__obwYA">
        </div>
      </div>
    </div>
    <div class="TopBannerExternal_separator__r8sr4">
      <div class="TopBannerExternal_separatorRight__PwT1p">
      </div>
      <div class="TopBannerExternal_separatorLeft__OpgEY">
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBannerExternal WithDefaults play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main:first-of-type"
       class="TopBannerSkipLink_skipLink__5N+l7"
    >
      <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="TopBannerExternal_topContainer__WnqE6">
      <div class="TopBannerLogo_containerLogo__HNnbt">
        <a href="https://www.skatteetaten.no/"
           class="TopBannerLogo_logoLink__DvORV"
        >
          <img class="TopBannerLogo_logo_mobile__x4lpB"
               alt="Forside Skatteetaten"
               src="ske-logo-mobile.c19c0351f0931cd93ae02f37a7fb7498.svg"
          >
          <img class="TopBannerLogo_logo_desktop__SI+eK"
               alt="Forside Skatteetaten"
               src="ske-logo.efcae54a4ea6b0ab43b2b65cd3ca166f.svg"
          >
        </a>
      </div>
      <div class="TopBannerExternal_contentContainer__h2K6k">
        <div class="TopBannerExternal_content__obwYA">
        </div>
      </div>
    </div>
    <div class="TopBannerExternal_separator__r8sr4">
      <div class="TopBannerExternal_separatorRight__PwT1p">
      </div>
      <div class="TopBannerExternal_separatorLeft__OpgEY">
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBannerExternal WithFirstAndSecondColumnAndClassNames play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main:first-of-type"
       class="TopBannerSkipLink_skipLink__5N+l7"
    >
      <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="TopBannerExternal_topContainer__WnqE6">
      <div class="TopBannerLogo_containerLogo__HNnbt">
        <a href="https://www.skatteetaten.no/"
           class="TopBannerLogo_logoLink__DvORV"
        >
          <img class="TopBannerLogo_logo_mobile__x4lpB"
               alt="Forside Skatteetaten"
               src="ske-logo-mobile.c19c0351f0931cd93ae02f37a7fb7498.svg"
          >
          <img class="TopBannerLogo_logo_desktop__SI+eK"
               alt="Forside Skatteetaten"
               src="ske-logo.efcae54a4ea6b0ab43b2b65cd3ca166f.svg"
          >
        </a>
      </div>
      <div class="TopBannerExternal_contentContainer__h2K6k">
        <div class="TopBannerExternal_content__obwYA">
          <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_standard__7194L  undefined"
                  aria-expanded="true"
          >
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_standard__veQ3F TopBannerButton_icon__FyVd5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
              </path>
            </svg>
            <span>
              Meny
            </span>
          </button>
        </div>
      </div>
    </div>
    <div class="TopBannerExternal_separator__r8sr4">
      <div class="TopBannerExternal_separatorRight__PwT1p">
      </div>
      <div class="TopBannerExternal_separatorLeft__OpgEY">
      </div>
    </div>
    <div class="TopBannerExternal_menuDrawerContainer__q1Noj">
      <nav aria-label="Temaoversikt"
           class="TopBannerExternal_columns__GeLJz  TopBannerExternal_columnsTwo__3Bn6m"
      >
        <div class="TopBannerExternal_column__SR540 dummyClassNamePinkBackground">
          First column and classNames background pink
        </div>
        <div class="TopBannerExternal_column__SR540 dummyClassNamePinkBackground">
          Second column and classNames background pink
        </div>
      </nav>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBannerExternal WithFirstAndSecondColumnClassNamesAndBreakpointS play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main:first-of-type"
       class="TopBannerSkipLink_skipLink__5N+l7"
    >
      <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="TopBannerExternal_topContainer__WnqE6">
      <div class="TopBannerLogo_containerLogo__HNnbt">
        <a href="https://www.skatteetaten.no/"
           class="TopBannerLogo_logoLink__DvORV"
        >
          <img class="TopBannerLogo_logo_mobile__x4lpB"
               alt="Forside Skatteetaten"
               src="ske-logo-mobile.c19c0351f0931cd93ae02f37a7fb7498.svg"
          >
          <img class="TopBannerLogo_logo_desktop__SI+eK"
               alt="Forside Skatteetaten"
               src="ske-logo.efcae54a4ea6b0ab43b2b65cd3ca166f.svg"
          >
        </a>
      </div>
      <div class="TopBannerExternal_contentContainer__h2K6k">
        <div class="TopBannerExternal_content__obwYA">
          <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_standard__7194L  undefined"
                  aria-expanded="true"
          >
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_standard__veQ3F TopBannerButton_icon__FyVd5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
              </path>
            </svg>
            <span>
              Meny
            </span>
          </button>
        </div>
      </div>
    </div>
    <div class="TopBannerExternal_separator__r8sr4">
      <div class="TopBannerExternal_separatorRight__PwT1p">
      </div>
      <div class="TopBannerExternal_separatorLeft__OpgEY">
      </div>
    </div>
    <div class="TopBannerExternal_menuDrawerContainer__q1Noj">
      <nav aria-label="Temaoversikt"
           class="TopBannerExternal_columns__GeLJz  TopBannerExternal_columnsTwo__3Bn6m"
      >
        <div class="TopBannerExternal_column__SR540 dummyClassNamePinkBackground">
          First column and classNames background pink
        </div>
        <div class="TopBannerExternal_column__SR540 dummyClassNamePinkBackground">
          Second column and classNames background pink
        </div>
      </nav>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBannerExternal WithFirstAndSecondColumnClassNamesAndBreakpointXS play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main:first-of-type"
       class="TopBannerSkipLink_skipLink__5N+l7"
    >
      <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="TopBannerExternal_topContainer__WnqE6">
      <div class="TopBannerLogo_containerLogo__HNnbt">
        <a href="https://www.skatteetaten.no/"
           class="TopBannerLogo_logoLink__DvORV"
        >
          <img class="TopBannerLogo_logo_mobile__x4lpB"
               alt="Forside Skatteetaten"
               src="ske-logo-mobile.c19c0351f0931cd93ae02f37a7fb7498.svg"
          >
          <img class="TopBannerLogo_logo_desktop__SI+eK"
               alt="Forside Skatteetaten"
               src="ske-logo.efcae54a4ea6b0ab43b2b65cd3ca166f.svg"
          >
        </a>
      </div>
      <div class="TopBannerExternal_contentContainer__h2K6k">
        <div class="TopBannerExternal_content__obwYA">
          <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_standard__7194L  undefined"
                  aria-expanded="true"
          >
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_standard__veQ3F TopBannerButton_icon__FyVd5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
              </path>
            </svg>
            <span>
              Meny
            </span>
          </button>
        </div>
      </div>
    </div>
    <div class="TopBannerExternal_separator__r8sr4">
      <div class="TopBannerExternal_separatorRight__PwT1p">
      </div>
      <div class="TopBannerExternal_separatorLeft__OpgEY">
      </div>
    </div>
    <div class="TopBannerExternal_menuDrawerContainer__q1Noj">
      <nav aria-label="Temaoversikt"
           class="TopBannerExternal_columns__GeLJz  TopBannerExternal_columnsTwo__3Bn6m"
      >
        <div class="TopBannerExternal_column__SR540 dummyClassNamePinkBackground">
          First column and classNames background pink
        </div>
        <div class="TopBannerExternal_column__SR540 dummyClassNamePinkBackground">
          Second column and classNames background pink
        </div>
      </nav>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBannerExternal WithFirstColumnAndClassNames play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main:first-of-type"
       class="TopBannerSkipLink_skipLink__5N+l7"
    >
      <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="TopBannerExternal_topContainer__WnqE6">
      <div class="TopBannerLogo_containerLogo__HNnbt">
        <a href="https://www.skatteetaten.no/"
           class="TopBannerLogo_logoLink__DvORV"
        >
          <img class="TopBannerLogo_logo_mobile__x4lpB"
               alt="Forside Skatteetaten"
               src="ske-logo-mobile.c19c0351f0931cd93ae02f37a7fb7498.svg"
          >
          <img class="TopBannerLogo_logo_desktop__SI+eK"
               alt="Forside Skatteetaten"
               src="ske-logo.efcae54a4ea6b0ab43b2b65cd3ca166f.svg"
          >
        </a>
      </div>
      <div class="TopBannerExternal_contentContainer__h2K6k">
        <div class="TopBannerExternal_content__obwYA">
          <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_standard__7194L  undefined"
                  aria-expanded="true"
          >
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_standard__veQ3F TopBannerButton_icon__FyVd5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
              </path>
            </svg>
            <span>
              Meny
            </span>
          </button>
        </div>
      </div>
    </div>
    <div class="TopBannerExternal_separator__r8sr4">
      <div class="TopBannerExternal_separatorRight__PwT1p">
      </div>
      <div class="TopBannerExternal_separatorLeft__OpgEY">
      </div>
    </div>
    <div class="TopBannerExternal_menuDrawerContainer__q1Noj">
      <nav aria-label="Temaoversikt"
           class="TopBannerExternal_columns__GeLJz  "
      >
        <div class="TopBannerExternal_column__SR540 dummyClassNamePinkBackground">
          First column and classNames background pink
        </div>
      </nav>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBannerExternal WithFirstColumnClassNamesAndBreakpointS play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main:first-of-type"
       class="TopBannerSkipLink_skipLink__5N+l7"
    >
      <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="TopBannerExternal_topContainer__WnqE6">
      <div class="TopBannerLogo_containerLogo__HNnbt">
        <a href="https://www.skatteetaten.no/"
           class="TopBannerLogo_logoLink__DvORV"
        >
          <img class="TopBannerLogo_logo_mobile__x4lpB"
               alt="Forside Skatteetaten"
               src="ske-logo-mobile.c19c0351f0931cd93ae02f37a7fb7498.svg"
          >
          <img class="TopBannerLogo_logo_desktop__SI+eK"
               alt="Forside Skatteetaten"
               src="ske-logo.efcae54a4ea6b0ab43b2b65cd3ca166f.svg"
          >
        </a>
      </div>
      <div class="TopBannerExternal_contentContainer__h2K6k">
        <div class="TopBannerExternal_content__obwYA">
          <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_standard__7194L  undefined"
                  aria-expanded="true"
          >
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_standard__veQ3F TopBannerButton_icon__FyVd5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
              </path>
            </svg>
            <span>
              Meny
            </span>
          </button>
        </div>
      </div>
    </div>
    <div class="TopBannerExternal_separator__r8sr4">
      <div class="TopBannerExternal_separatorRight__PwT1p">
      </div>
      <div class="TopBannerExternal_separatorLeft__OpgEY">
      </div>
    </div>
    <div class="TopBannerExternal_menuDrawerContainer__q1Noj">
      <nav aria-label="Temaoversikt"
           class="TopBannerExternal_columns__GeLJz  "
      >
        <div class="TopBannerExternal_column__SR540 dummyClassNamePinkBackground">
          First column and classNames background pink
        </div>
      </nav>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBannerExternal WithFirstColumnClassNamesAndBreakpointXS play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main:first-of-type"
       class="TopBannerSkipLink_skipLink__5N+l7"
    >
      <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="TopBannerExternal_topContainer__WnqE6">
      <div class="TopBannerLogo_containerLogo__HNnbt">
        <a href="https://www.skatteetaten.no/"
           class="TopBannerLogo_logoLink__DvORV"
        >
          <img class="TopBannerLogo_logo_mobile__x4lpB"
               alt="Forside Skatteetaten"
               src="ske-logo-mobile.c19c0351f0931cd93ae02f37a7fb7498.svg"
          >
          <img class="TopBannerLogo_logo_desktop__SI+eK"
               alt="Forside Skatteetaten"
               src="ske-logo.efcae54a4ea6b0ab43b2b65cd3ca166f.svg"
          >
        </a>
      </div>
      <div class="TopBannerExternal_contentContainer__h2K6k">
        <div class="TopBannerExternal_content__obwYA">
          <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_standard__7194L  undefined"
                  aria-expanded="true"
          >
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_standard__veQ3F TopBannerButton_icon__FyVd5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
              </path>
            </svg>
            <span>
              Meny
            </span>
          </button>
        </div>
      </div>
    </div>
    <div class="TopBannerExternal_separator__r8sr4">
      <div class="TopBannerExternal_separatorRight__PwT1p">
      </div>
      <div class="TopBannerExternal_separatorLeft__OpgEY">
      </div>
    </div>
    <div class="TopBannerExternal_menuDrawerContainer__q1Noj">
      <nav aria-label="Temaoversikt"
           class="TopBannerExternal_columns__GeLJz  "
      >
        <div class="TopBannerExternal_column__SR540 dummyClassNamePinkBackground">
          First column and classNames background pink
        </div>
      </nav>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBannerExternal WithFirstSecondAndThirdColumnAndClassNames play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main:first-of-type"
       class="TopBannerSkipLink_skipLink__5N+l7"
    >
      <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="TopBannerExternal_topContainer__WnqE6">
      <div class="TopBannerLogo_containerLogo__HNnbt">
        <a href="https://www.skatteetaten.no/"
           class="TopBannerLogo_logoLink__DvORV"
        >
          <img class="TopBannerLogo_logo_mobile__x4lpB"
               alt="Forside Skatteetaten"
               src="ske-logo-mobile.c19c0351f0931cd93ae02f37a7fb7498.svg"
          >
          <img class="TopBannerLogo_logo_desktop__SI+eK"
               alt="Forside Skatteetaten"
               src="ske-logo.efcae54a4ea6b0ab43b2b65cd3ca166f.svg"
          >
        </a>
      </div>
      <div class="TopBannerExternal_contentContainer__h2K6k">
        <div class="TopBannerExternal_content__obwYA">
          <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_standard__7194L  undefined"
                  aria-expanded="true"
          >
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_standard__veQ3F TopBannerButton_icon__FyVd5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
              </path>
            </svg>
            <span>
              Meny
            </span>
          </button>
        </div>
      </div>
    </div>
    <div class="TopBannerExternal_separator__r8sr4">
      <div class="TopBannerExternal_separatorRight__PwT1p">
      </div>
      <div class="TopBannerExternal_separatorLeft__OpgEY">
      </div>
    </div>
    <div class="TopBannerExternal_menuDrawerContainer__q1Noj">
      <nav aria-label="Temaoversikt"
           class="TopBannerExternal_columns__GeLJz TopBannerExternal_columnsThree__gP-p5 TopBannerExternal_columnsTwo__3Bn6m"
      >
        <div class="TopBannerExternal_column__SR540 dummyClassNamePinkBackground">
          First column and classNames background pink
        </div>
        <div class="TopBannerExternal_column__SR540 dummyClassNamePinkBackground">
          Second column and classNames background pink
        </div>
        <div class="TopBannerExternal_column__SR540 dummyClassNamePinkBackground">
          Third column and classNames background pink
        </div>
      </nav>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBannerExternal WithFirstSecondAndThirdColumnClassNamesAndBreakpointS play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main:first-of-type"
       class="TopBannerSkipLink_skipLink__5N+l7"
    >
      <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="TopBannerExternal_topContainer__WnqE6">
      <div class="TopBannerLogo_containerLogo__HNnbt">
        <a href="https://www.skatteetaten.no/"
           class="TopBannerLogo_logoLink__DvORV"
        >
          <img class="TopBannerLogo_logo_mobile__x4lpB"
               alt="Forside Skatteetaten"
               src="ske-logo-mobile.c19c0351f0931cd93ae02f37a7fb7498.svg"
          >
          <img class="TopBannerLogo_logo_desktop__SI+eK"
               alt="Forside Skatteetaten"
               src="ske-logo.efcae54a4ea6b0ab43b2b65cd3ca166f.svg"
          >
        </a>
      </div>
      <div class="TopBannerExternal_contentContainer__h2K6k">
        <div class="TopBannerExternal_content__obwYA">
          <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_standard__7194L  undefined"
                  aria-expanded="true"
          >
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_standard__veQ3F TopBannerButton_icon__FyVd5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
              </path>
            </svg>
            <span>
              Meny
            </span>
          </button>
        </div>
      </div>
    </div>
    <div class="TopBannerExternal_separator__r8sr4">
      <div class="TopBannerExternal_separatorRight__PwT1p">
      </div>
      <div class="TopBannerExternal_separatorLeft__OpgEY">
      </div>
    </div>
    <div class="TopBannerExternal_menuDrawerContainer__q1Noj">
      <nav aria-label="Temaoversikt"
           class="TopBannerExternal_columns__GeLJz TopBannerExternal_columnsThree__gP-p5 TopBannerExternal_columnsTwo__3Bn6m"
      >
        <div class="TopBannerExternal_column__SR540 dummyClassNamePinkBackground">
          First column and classNames background pink
        </div>
        <div class="TopBannerExternal_column__SR540 dummyClassNamePinkBackground">
          Second column and classNames background pink
        </div>
        <div class="TopBannerExternal_column__SR540 dummyClassNamePinkBackground">
          Third column and classNames background pink
        </div>
      </nav>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBannerExternal WithFirstSecondAndThirdColumnClassNamesAndBreakpointXS play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main:first-of-type"
       class="TopBannerSkipLink_skipLink__5N+l7"
    >
      <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="TopBannerExternal_topContainer__WnqE6">
      <div class="TopBannerLogo_containerLogo__HNnbt">
        <a href="https://www.skatteetaten.no/"
           class="TopBannerLogo_logoLink__DvORV"
        >
          <img class="TopBannerLogo_logo_mobile__x4lpB"
               alt="Forside Skatteetaten"
               src="ske-logo-mobile.c19c0351f0931cd93ae02f37a7fb7498.svg"
          >
          <img class="TopBannerLogo_logo_desktop__SI+eK"
               alt="Forside Skatteetaten"
               src="ske-logo.efcae54a4ea6b0ab43b2b65cd3ca166f.svg"
          >
        </a>
      </div>
      <div class="TopBannerExternal_contentContainer__h2K6k">
        <div class="TopBannerExternal_content__obwYA">
          <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_standard__7194L  undefined"
                  aria-expanded="true"
          >
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_standard__veQ3F TopBannerButton_icon__FyVd5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
              </path>
            </svg>
            <span>
              Meny
            </span>
          </button>
        </div>
      </div>
    </div>
    <div class="TopBannerExternal_separator__r8sr4">
      <div class="TopBannerExternal_separatorRight__PwT1p">
      </div>
      <div class="TopBannerExternal_separatorLeft__OpgEY">
      </div>
    </div>
    <div class="TopBannerExternal_menuDrawerContainer__q1Noj">
      <nav aria-label="Temaoversikt"
           class="TopBannerExternal_columns__GeLJz TopBannerExternal_columnsThree__gP-p5 TopBannerExternal_columnsTwo__3Bn6m"
      >
        <div class="TopBannerExternal_column__SR540 dummyClassNamePinkBackground">
          First column and classNames background pink
        </div>
        <div class="TopBannerExternal_column__SR540 dummyClassNamePinkBackground">
          Second column and classNames background pink
        </div>
        <div class="TopBannerExternal_column__SR540 dummyClassNamePinkBackground">
          Third column and classNames background pink
        </div>
      </nav>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBannerExternal WithRef play-test 1`] = `
<div data-test-block="true">
  <header class
          id="dummyIdForwardedFromRef"
  >
    <a href="main:first-of-type"
       class="TopBannerSkipLink_skipLink__5N+l7"
    >
      <span class="TopBannerSkipLink_skipLinkContent__T3QpL">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerSkipLink_icon__Xwbwo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M11.1 1.5h1.8v16.8l5.1-5.2 1.3 1.4L12 22l-7.3-7.6L6 13l5.1 5.2V1.5Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="TopBannerExternal_topContainer__WnqE6">
      <div class="TopBannerLogo_containerLogo__HNnbt">
        <a href="https://www.skatteetaten.no/"
           class="TopBannerLogo_logoLink__DvORV"
        >
          <img class="TopBannerLogo_logo_mobile__x4lpB"
               alt="Forside Skatteetaten"
               src="ske-logo-mobile.c19c0351f0931cd93ae02f37a7fb7498.svg"
          >
          <img class="TopBannerLogo_logo_desktop__SI+eK"
               alt="Forside Skatteetaten"
               src="ske-logo.efcae54a4ea6b0ab43b2b65cd3ca166f.svg"
          >
        </a>
      </div>
      <div class="TopBannerExternal_contentContainer__h2K6k">
        <div class="TopBannerExternal_content__obwYA">
          <button class="TopBannerButton_button__5RUa7 TopBannerButton_button_filled__oJNLx  undefined">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerButton_icon_filled__h6Gxu TopBannerButton_icon__FyVd5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M12 17a2 2 0 0 1-2-2c0-1.11.89-2 2-2a2 2 0 0 1 0 4Zm6 3V10H6v10h12Zm0-12a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V10c0-1.11.89-2 2-2h1V6a5 5 0 1 1 10 0v2h1Zm-6-5a3 3 0 0 0-3 3v2h6V6a3 3 0 0 0-3-3Z">
              </path>
            </svg>
            <span>
              Logg inn
            </span>
          </button>
        </div>
      </div>
    </div>
    <div class="TopBannerExternal_separator__r8sr4">
      <div class="TopBannerExternal_separatorRight__PwT1p">
      </div>
      <div class="TopBannerExternal_separatorLeft__OpgEY">
      </div>
    </div>
  </header>
</div>
`;
